...
          showMapNotesRefreshErrorSnackBar(context);
        }
      }
    }

    return Semantics(
      identifier: 'screen-map-notes-list',
      child: Scaffold(
        appBar: AppBar(
          leading: Semantics(
            identifier: 'action-show-map',
            button: true,
            child: IconButton(
              tooltip: context.l10n.navMap,
              icon: const Icon(Icons.map_outlined),
              onPressed: onShowMap,
            ),
...
